hphp/hack/test/typecheck/reactive/rx_byval_collections3.php.coeffects.exp
File "rx_byval_collections3.php", line 6, characters 3-14:
Assigning to an element of a Hack Collection object via `[]` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "rx_byval_collections3.php", line 5, characters 42-43:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
